--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name ="description" content="mockup portfolio re-create for Quynh Pham">
+    <title>Quynh Pham</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    <header class="navigation">
+        <a href="#" class="nav-left"> Quynh Pham </a>
+        <nav class="links">
+            <a href="#About" class="nav-right"> About | </a>
+            <a href="#Portfolio" class="nav-right"> Portfolio |</a>
+            <a href="Contact" class="nav-right"> Contact </a>
+        </nav>
+
+    </header>
+    
+    <main class="content">
+        <div class="About-me">
+            <h1> About Me </h1>
+            <img src="./Images/profile.jpg" alt="girl in purple dress" class="profilephoto">
+            <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer finibus ante nisi, et auctor neque lobortis ut. Vivamus vitae neque non erat aliquam viverra.
+                Etiam dignissim orci in scelerisque tincidunt. Donec pellentesque pharetra ipsum, ac tincidunt nulla feugiat id. Sed erat turpis, consequat vitae augue ac, aliquam rutrum magna. Sed sit amet nisi porttitor, mollis ex sit amet, gravida enim. 
+                Integer pellentesque felis nulla, non auctor mi condimentum in. 
+                Nunc eget molestie est. Proin tellus mi, feugiat id posuere et, dignissim non ex. Suspendisse pharetra posuere nibh ut auctor. 
+                Sed nec sem eu odio mollis aliquam. Aenean posuere et mi ut tincidunt. Morbi vehicula blandit sollicitudin. Maecenas ipsum elit, pellentesque facilisis feugiat eu, eleifend vitae risus. Curabitur vel libero eget mi pulvinar tincidunt. 
+                Curabitur porttitor, tortor ut ultricies finibus, urna magna volutpat dui, sit amet dignissim enim enim pulvinar eros. </p>
+            <p class="lorem">
+                Donec pellentesque, diam nec bibendum facilisis, diam urna cursus velit, eu sagittis purus erat id eros. Vivamus sed urna metus. Donec lectus velit, pretium nec odio quis, aliquet sollicitudin velit. 
+                Curabitur ex nulla, dignissim a pretium vel, aliquam quis felis. Maecenas porttitor posuere tortor. Donec non nibh accumsan, ornare ipsum in, placerat dolor. Ut nec ultricies enim. Mauris mollis laoreet erat sit amet pharetra. 
+                Aenean maximus dignissim dapibus. Nulla condimentum mattis dolor nec placerat. Maecenas tincidunt et augue non maximus. Vivamus eget elit dapibus, varius odio quis, consectetur magna. Maecenas tempor hendrerit dolor. 
+                Donec ligula urna, maximus tempus lobortis vitae, congue quis orci. Quisque eleifend, lacus nec aliquam tincidunt, nunc quam euismod nisi, ac tempor ex mauris in est.
+                Proin purus eros, scelerisque et gravida a, tristique vel sapien. Vestibulum tempor, purus nec convallis pharetra, nisl velit rhoncus urna, ut consequat erat nulla nec arcu. 
+                Vestibulum placerat laoreet nulla. Donec rutrum nulla id metus sodales porta. Aliquam mollis, nulla ut finibus imperdiet, risus ipsum consequat metus, et cursus augue odio aliquet ex. 
+                Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In hac habitasse platea dictumst. Proin ullamcorper nulla sed metus pellentesque consequat. 
+                Cras tristique vestibulum justo, quis convallis nibh. Etiam facilisis arcu eu ante tempus, vitae lobortis risus cursus. Proin pharetra felis nec nibh pulvinar, quis sagittis odio elementum.
+               </p>
+            </div>   
+
+            <div class="connect">
+            <h2> Connect With Me</h2>
+            <img src="./Images/git.png" alt="github logo" class="logos">
+            <img src="./Images/linkedin.png" alt="linkedin logo" class="logos">
+            <img src="./Images/soverflow.png" alt="stackoverflow logo" class="logos">
+
+            </div>
+
+        
+
+        </div>    
+    </main>
+    <footer> &copy Quynh Pham 2023 </footer>
+</body>
+</html>
