--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 </p>
         </div>   
 
-        <div class="connect">
+        <aside class="connect">
             <h2> Connect With Me</h2>
                 <img src="./Images/git.png" alt="github logo" class="logos">
                 <img src="./Images/linkedin.png" alt="linkedin logo" class="logos">
                 <img src="./Images/soverflow.png" alt="stackoverflow logo" class="logos">
 
-        </div>
+        </aside>
 
     </main>
 
